assets/custom.css
.shipping-delay {
    padding: 15px 20px;
    color: black;
    font-size: 14px;
    font-weight: 400;
    width: 100%;
    background-color: rgb(155, 225, 247);
    border: none;
    display: flex;
    position: relative;
    padding-left: 50px;
}

.shipping-delay p {
    margin: 0px;
    line-height: 1.3;
}

.shipping-delay svg {
    width: 20px;
    position: absolute;
    left: 20px;
    top: 50%;
    transform: translateY(-50%);
}

.shipping-delay.product-shipping-delay {
    margin-top: 20px;
}

.shipping-delay.cart-shipping-delay {
    margin-bottom: 20px;
}

